Wed Mar 30 00:24:53 2011  Tanaka Akira  <akr@fsij.org>

	* ext/stringio/stringio.c: parenthesize macro arguments.

Tue Mar 29 21:51:31 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* object.c (rb_String): Kernel#String should call to_str before to_s.

Tue Mar 29 10:28:08 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/webrick/test_filehandler.rb
	  (WEBrick::TestFileHandler#test_short_filename): the cgi doesn't exist
	  on current directory.

Tue Mar 29 05:19:57 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/raddrinfo.c: parenthesize macro arguments.

Tue Mar 29 00:03:51 2011 Tajima Akil <artonx@yahoo.co.jp>	

	* test/webrick/test_filehandler.rb (test_short_filename):
	 read real short filename by cmd because smb mounted files
	 have different naming convention.

Mon Mar 28 11:38:08 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/date/date_core.c (date_s_today): use int for year.

	* ext/date/date_core.c (datetime_s_now): ditto.

Mon Mar 28 11:07:41 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/extmk.rb: set MFLAGS from MAKEFLAGS when using nmake.

Mon Mar 28 11:07:00 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* common.mk (love): all you need is love.

Sun Mar 27 23:16:31 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ipsocket.c: parenthesize macro arguments.

Sun Mar 27 16:55:34 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-mode.el (ruby-mode-map): remove unnecessary
	  binding. fixes
	  http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=468952

	* misc/ruby-mode.el: suppress warnings at byte compile.  fixes
	  http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=502926

Sun Mar 27 11:18:35 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: removed unused variables.

Sat Mar 26 15:16:09 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/getaddrinfo.c: parenthesize macro arguments.

Sat Mar 26 05:27:34 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/date/lib/date/format.rb (DateTime#strftime): removed because